--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,9 +36,10 @@ jobs:
           run: git clone https://github.com/Rohail33/Realking_kernel_sm8250
         - name: build
           run: |
-            sudo chmod -X build_kernel.sh
+            rm ./Realking_kernel_sm8250/build_kernel.sh
             mv build_kernel.sh ./Realking_kernel_sm8250/
             cd ./Realking_kernel_sm8250
+            sudo chmod -R 0777 ./*
             ./build_kernel.sh 
         - name: upload artifact
           uses: actions/upload-artifact@v4
