--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,6 +40,7 @@ jobs:
             rm ./Realking_kernel_sm8250/build_kernel.sh
             mv build_kernel.sh ./Realking_kernel_sm8250/
             cd ./Realking_kernel_sm8250
+            git submodule init && git submodule update
             sudo chmod -R 0777 ./*
             ./build_kernel.sh 
         - name: upload artifact
